@@ -19,7 +19,7 @@
 import modules, tools
 
 from tools   import consts,  prefs
-from gettext import ngettext, gettext  as _
+from gettext import ngettext, gettext as _
 
 MOD_INFO = ('Status and Title Bars', 'Status and Title Bars', '', [], True, False)
 
@@ -29,39 +29,104 @@ class StatusbarTitlebar(modules.Module):
 
     def __init__(self):
         """ Constructor """
-        modules.Module.__init__(self, (consts.MSG_EVT_NEW_TRACKLIST, consts.MSG_EVT_NEW_TRACK, consts.MSG_EVT_STOPPED,
-                                       consts.MSG_EVT_APP_STARTED,   consts.MSG_EVT_PAUSED,    consts.MSG_EVT_UNPAUSED))
+        modules.Module.__init__(self, (consts.MSG_EVT_NEW_TRACKLIST, consts.MSG_EVT_NEW_TRACK, consts.MSG_EVT_STOPPED, consts.MSG_EVT_APP_STARTED,
+                                       consts.MSG_EVT_PAUSED, consts.MSG_EVT_UNPAUSED, consts.MSG_EVT_TRACKLIST_NEW_SEL))
 
 
     def onAppStarted(self):
         """ Real initialization function, called when this module has been loaded """
-        self.title     = consts.appName
-        self.window    = prefs.getWidgetsTree().get_widget('win-main')
-        self.statusbar = prefs.getWidgetsTree().get_widget('statusbar')
-        self.contextId = self.statusbar.get_context_id('tracklist info')
+        self.window  = prefs.getWidgetsTree().get_widget('win-main')
+        self.status1 = prefs.getWidgetsTree().get_widget('lbl-status1')
+        self.status2 = prefs.getWidgetsTree().get_widget('lbl-status2')
+
+        # Current player status
+        self.paused    = False
+        self.playtime  = 0
+        self.tracklist = []
+        self.selTracks = []
+        self.currTrack = None
+
         # Initial status
-        self.onNewTracklist(0, 0)
-        self.onNewTrack(None)
+        self.__updateTitlebar()
+        self.__updateStatusbar()
 
 
-    def onNewTracklist(self, count, playtime):
-        """ A new tracklist has been set """
+    def __updateTitlebar(self):
+        """ Update the title bar """
+        if self.currTrack is None: self.window.set_title(consts.appName)
+        elif self.paused:          self.window.set_title('%s - %s %s' % (self.currTrack.getArtist(), self.currTrack.getTitle(), _('[paused]')))
+        else:                      self.window.set_title('%s - %s' % (self.currTrack.getArtist(), self.currTrack.getTitle()))
+
+
+    def __updateStatusbar(self):
+        """ Update the status bar """
+        # Tracklist
+        count = len(self.tracklist)
         if count == 0:
-            text = ''
+            self.status1.set_label('')
         else:
-            text = ngettext('One track in playlist  [%(length)s]', '%(count)u tracks in playlist  [%(length)s]', count) \
-                    % {'count': count, 'length': tools.sec2str(playtime)}
+            self.status1.set_label(ngettext('One track in playlist  [%(length)s]', '%(count)u tracks in playlist  [%(length)s]', count) \
+                                      % {'count': count, 'length': tools.sec2str(self.playtime)})
 
-        self.statusbar.pop(self.contextId)
-        self.statusbar.push(self.contextId, text)
+        # Selected tracks
+        count = len(self.selTracks)
+        if count == 0:
+            self.status2.set_label('')
+        else:
+            selection = ngettext('One track selected', '%(count)u tracks selected', count) % {'count': count}
+
+            audioType = self.selTracks[0].getType()
+            for track in self.selTracks[1:]:
+                if track.getType() != audioType:
+                    audioType = _('various')
+                    break
+
+            bitrate = self.selTracks[0].getBitrate()
+            for track in self.selTracks[1:]:
+                if track.getBitrate() != bitrate:
+                    bitrate = _('various')
+                    break
+
+            self.status2.set_label(_('%(selection)s (Type: %(type)s, Bitrate: %(bitrate)s)') % {'selection': selection, 'type': audioType, 'bitrate': bitrate})
 
 
     def onNewTrack(self, track):
-        """ A new track is being played, None if none """
-        if track is None: self.title = consts.appName
-        else:             self.title = '%s - %s' % (track.getArtist(), track.getTitle())
+        """ A new track is being played """
+        self.paused    = False
+        self.currTrack = track
+        self.__updateTitlebar()
 
-        self.window.set_title(self.title)
+
+    def onPaused(self):
+        """ Playback has been paused """
+        self.paused = True
+        self.__updateTitlebar()
+
+
+    def onUnpaused(self):
+        """ Playback has been unpaused """
+        self.paused = False
+        self.__updateTitlebar()
+
+
+    def onStopped(self):
+        """ Playback has been stopped """
+        self.paused    = False
+        self.currTrack = None
+        self.__updateTitlebar()
+
+
+    def onNewTracklist(self, tracklist, playtime):
+        """ A new tracklist has been set """
+        self.playtime  = playtime
+        self.tracklist = tracklist
+        self.__updateStatusbar()
+
+
+    def onNewSelection(self, tracks):
+        """ A new set of track has been selected """
+        self.selTracks = tracks
+        self.__updateStatusbar()
 
 
     # --== Message handler ==--
@@ -69,9 +134,10 @@ class StatusbarTitlebar(modules.Module):
 
     def handleMsg(self, msg, params):
         """ Handle messages sent to this module """
-        if   msg == consts.MSG_EVT_PAUSED:        self.window.set_title('%s %s' % (self.title, _('[paused]')))
-        elif msg == consts.MSG_EVT_STOPPED:       self.onNewTrack(None)
-        elif msg == consts.MSG_EVT_UNPAUSED:      self.window.set_title(self.title)
-        elif msg == consts.MSG_EVT_NEW_TRACK:     self.onNewTrack(params['track'])
-        elif msg == consts.MSG_EVT_APP_STARTED:   self.onAppStarted()
-        elif msg == consts.MSG_EVT_NEW_TRACKLIST: self.onNewTracklist(len(params['tracks']), params['playtime'])
+        if   msg == consts.MSG_EVT_PAUSED:            self.onPaused()
+        elif msg == consts.MSG_EVT_STOPPED:           self.onStopped()
+        elif msg == consts.MSG_EVT_UNPAUSED:          self.onUnpaused()
+        elif msg == consts.MSG_EVT_NEW_TRACK:         self.onNewTrack(params['track'])
+        elif msg == consts.MSG_EVT_APP_STARTED:       self.onAppStarted()
+        elif msg == consts.MSG_EVT_NEW_TRACKLIST:     self.onNewTracklist(params['tracks'], params['playtime'])
+        elif msg == consts.MSG_EVT_TRACKLIST_NEW_SEL: self.onNewSelection(params['tracks'])
